<resources>
    <string name="app_name">RoomKotlinDemo</string>


    <string name="selected_item">Selected item:</string>
    <string name="save_employee">Save Employee</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="taxid">taxID</string>
    <string name="position">Position</string>
    <string name="department">Department</string>
    <string name="delete">Delete</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="load_details">Load Details</string>
    <string name="enter_employee_tax_id">Enter Employee Tax ID</string>
    <string name="employee_details">Employee Details</string>
    <string name="details">Details</string>

    <string-array name="employee_array">
        <item>IT</item>
        <item>Finance</item>
        <item>Management</item>
    </string-array>

</resources>
