<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/detailsActivityBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateActivityBtn"
        android:onClick="onClick"
        android:text="@string/employee_details" />

    <Button
        android:id="@+id/updateActivityBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deleteActivity"
        android:onClick="onClick"
        android:text="UPDATE EMPLOYEE" />

    <Button
        android:id="@+id/saveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/save_employee" />
    <Button
        android:id="@+id/deleteActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/saveActivity"
        android:onClick="onClick"
        android:text="@string/delete_employee" />






</RelativeLayout>